--- a/app/src/main/res/layout/activity_live_video_player.xml
+++ b/app/src/main/res/layout/activity_live_video_player.xml
@@ -20,7 +20,8 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-  <com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/player_view"
+  <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+      android:id="@+id/player_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 
@@ -44,14 +45,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
       <Button
           android:id="@+id/retry_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/retry"
-          android:visibility="gone" />
+          android:visibility="visible" />
 
     </LinearLayout>
 
