--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -5,81 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/root_layout"
-    tools:context="io.antmedia.android.Broadcast.BroadcastActivity"
+    tools:context="io.antmedia.android.Play.PlayActivity"
     >
-    <android.opengl.GLSurfaceView
-        android:id="@+id/gls"
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/playerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:layout_gravity="center" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/transparent_cover"
-        android:background="#6D131313"/>
-    <TextView
-        android:id="@+id/tvStatus"
+        android:layout_height="match_parent"/>
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/rounded_live"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:padding="5dp"
-        android:textColor="#ffff"
-        android:text="On Air"
+        android:text="RETRY"
+        android:id="@+id/btnRetry"
+        android:layout_centerInParent="true"
         android:visibility="gone"/>
     <LinearLayout
+        android:id="@+id/control"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        >
+        android:layout_centerInParent="true">
 
-        <ImageButton
-            android:id="@+id/btnCam"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:onClick="cam"
-            android:src="@drawable/ic_switch_camera_white_24dp"
-            />
-
-        <ImageButton
-            android:id="@+id/btnSetting"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:onClick="setting"
-            android:src="@drawable/ic_settings_white_24dp"
-            />
-
-        <ImageButton
-            android:id="@+id/btnMic"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:onClick="mic"
-            android:src="@drawable/ic_mic_mute_on_24"
-            />
-
-        <Button
-            android:id="@+id/btnStart"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:onClick="broadcast"
-            android:layout_gravity="center"
-            android:text="Start"
-            />
         <ImageButton
             android:id="@+id/btnRec"
             style="@style/Widget.AppCompat.Button.Borderless"
@@ -88,6 +34,23 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_baseline_fiber_manual_record_24"
+            />
+        <ImageButton
+            android:id="@+id/btnRaise"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_baseline_notifications_active_24"
+            />
+        <Button
+            android:id="@+id/btnLeave"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Leave"
             />
         <ImageButton
             android:id="@+id/btnShare"
@@ -108,4 +71,5 @@
             android:src="@drawable/ic_baseline_chat_24"
             />
     </LinearLayout>
+
 </RelativeLayout>
